<resources>
    <string name="app_name">CryptoApp</string>
    <string name="dashboard">Dashboard</string>
    <string name="portfolio">Portfolio</string>
    <string name="trade">Trade</string>
    <string name="prices">Prices</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>