<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/portfolioFragment"
        android:icon="@drawable/ic_portfolio"
        android:title="@string/portfolio" />

    <item
        android:id="@+id/tradeFragment"
        android:icon="@drawable/ic_trade"
        android:title="@string/trade" />

    <item
        android:id="@+id/pricesFragment"
        android:icon="@drawable/ic_prices"
        android:title="@string/prices" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>